# PancakeEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
assets/shaders/: debug.frag  debug.vert  default.frag  default.vert  entity.frag
assets/textures/: faces.json
dependencies/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: external.hpp
include/audio/: audioengine.hpp  audioplayer.hpp  audiowave.hpp
include/components/: cameracontroller.hpp
include/core/: camera.hpp  component.hpp  entity.hpp  listener.hpp  scene.hpp  window.hpp
include/graphics/primitives/: font.hpp  framebuffer.hpp  shader.hpp  sprite.hpp  texture.hpp
include/graphics/renderer/: renderer.hpp  spriterenderer.hpp  textrenderer.hpp
include/pancake/: asset.hpp  audio.hpp  components.hpp  core.hpp  graphics.hpp  pancake.hpp  physics.hpp  util.hpp  window.hpp
include/pancake/asset/: assetpool.hpp  spritesheet.hpp
include/pancake/audio/: audioengine.hpp  audioplayer.hpp  audiowave.hpp
include/pancake/components/: animation.hpp  cameracontroller.hpp  fade.hpp  transition.hpp
include/pancake/core/: camera.hpp  component.hpp  console.hpp  engine.hpp  entity.hpp  factory.hpp  listener.hpp  scene.hpp  spatial.hpp  window.hpp
include/pancake/graphics/: debugdraw.hpp  font.hpp  framebuffer.hpp  primitives.hpp  renderer.hpp  shader.hpp  sprite.hpp  spriterenderer.hpp  stb.hpp  textrenderer.hpp  texture.hpp
include/pancake/graphics/primitives/: font.hpp  framebuffer.hpp  shader.hpp  sprite.hpp
include/pancake/graphics/renderer/: renderer.hpp  spriterenderer.hpp  textrenderer.hpp
include/pancake/physics/: box.hpp  circle.hpp  collider.hpp  collision.hpp  collisionmanifold.hpp  force.hpp  forcegenerator.hpp  forceregistry.hpp  forces.hpp  gravity.hpp  primitives.hpp  raycast.hpp  rigidbody.hpp  world.hpp
include/pancake/physics/collision/: collision.hpp
include/pancake/physics/forces/: forcegenerator.hpp  forceregistry.hpp  gravity.hpp
include/pancake/physics/primitives/: box.hpp  circle.hpp  collider.hpp  rigidbody.hpp
include/pancake/physics/raycast/: raycast.hpp
include/pancake/scenes/: title.hpp
include/pancake/util/: assetpool.hpp  audio.hpp  fonts.hpp  pixellari.h  shaders.hpp
include/pancake/window/: listener.hpp  window.hpp
include/physics/: world.hpp
include/physics/collision/: collision.hpp  collisionmanifold.hpp
include/physics/forces/: forcegenerator.hpp  forceregistry.hpp  gravity.hpp
include/physics/primitives/: box.hpp  circle.hpp  collider.hpp  rigidbody.hpp
include/physics/raycast/: raycast.hpp
include/scenes/: title.hpp
include/util/: assetpool.hpp
include/window/: window.hpp
src/: main.cpp  window.cpp
src/asset/: assetpool.cpp  spritesheet.cpp
src/audio/: audioengine.cpp  audioplayer.cpp  audiowave.cpp  audiowave.hpp
src/components/: animation.cpp  cameracontroller.cpp  fade.cpp  transition.cpp
src/core/: camera.cpp  component.cpp  console.cpp  engine.cpp  entity.cpp  factory.cpp  listener.cpp  scene.cpp  spatial.cpp  window.cpp
src/graphics/: debugdraw.cpp  font.cpp  framebuffer.cpp  renderer.cpp  shader.cpp  sprite.cpp  spriterenderer.cpp  textrenderer.cpp  texture.cpp
src/graphics/primitives/: font.cpp  framebuffer.cpp  shader.cpp  sprite.cpp  texture.cpp
src/graphics/renderer/: debugdraw.cpp  renderer.cpp  spriterenderer.cpp  textrenderer.cpp
src/physics/: box.cpp  circle.cpp  collider.cpp  collision.cpp  collisionmanifold.cpp  force.cpp  forceregistry.cpp  gravity.cpp  raycast.cpp  rigidbody.cpp  world.cpp
src/physics/collision/: collision.cpp  collisionmanifold.cpp
src/physics/forces/: forceregistry.cpp  gravity.cpp
src/physics/primitives/: box.cpp  circle.cpp  collider.cpp  rigidbody.cpp
src/physics/raycast/: raycast.cpp
src/scenes/: title.cpp
src/util/: assetpool.cpp  spritesheet.cpp
src/window/: listener.cpp  window.cpp
